--- a/resume.html
+++ b/resume.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="Tyler" >
 
     <title>Résumé</title>
 
@@ -56,13 +56,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a href="#cat1">Education</a>
-                    </li>
-                    <li>
-                        <a href="#cat2">Technical Skills</a>
-                    </li>
-                    <li>
-                        <a href="#cat3">Professional Experience</a>
+                        <a href="#main" class="page-scroll">Résumé</a>
                     </li>
                 </ul>
             </div>
@@ -108,15 +102,64 @@
         <div class="portfolioContainer" style="">
 
             <div class="box edu">
-                EDUCATION
+               <h2>California Polytechnic State University, San Luis Obispo</h2>
+               <br>
+               <h3>
+                  B.S. in <u>Computer Engineering</u><br><br>
+                  4th Year Undergraduate<br><br>
+                  Graduating June 2016<br><br>
+                  Overall GPA: 3.272<br><br>
+                  Dean's List 3 Times
+               </h3>
+               <br>
+               <p>
+                  <a class="btn btn-default" href="schoolprojects.html" role="button">View School Courses &raquo;</a>
+               </p>
             </div>
 
             <div class="box skills">
-                TECHNICAL SKILLS
+               <h2>Programming Languages</h2>
+               <h4>
+                  C, Java, Python, C++, VBA, HTML, CSS, JavaScript, Swift, AppleScript, MIPS Assembly<br>
+               </h4>
+               <h5>*Always excited to learn new programming concepts and languages*<br></h5>
+               <br>
+               <h2>Relevant Knowledge</h2>
+               <h4>
+                  Object Oriented Programming<br><br>
+                  POSIX Multithreading<br><br>
+                  PCAP Library (Network Tracing)<br><br>
+                  JavaFX Library
+               </h4>
+               <br>
+               <h2>Operating Systems</h2>
+               <h4>
+                  Windows ('95  8.1)<br><br>
+                  OS X (Leopard - Yosemite)<br><br>
+                  Linux (Ubuntu, CentOS, Fedora, RedHat)<br><br><br>
+                  CPU Scheduling, Memory Management, File Systems (Experience with FUSE)
+               </h4>
+               <br>
+               <h2>Development Environments</h2>
+               <h4>
+                  Unix Terminal (VIM), Xcode, Visual Studio, Eclipse, Netbeans, Bluefish
+               </h4>
+               <p></p>
             </div>
 
             <div class="box prof">
-                PROFESSIONAL EXPERIENCE
+               <h2>The Aerospace Corporation</h2>
+               <h3>July 2011 - September 2014</h3>
+               <br>
+               <h3>
+                  Software Development Intern<br><br>
+                  Recurring Internship Offer for 4 Years<br><br>
+                  Worked On Over 20 Projects<br><br>
+               </h3>
+               <br>
+               <p>
+                  <a class="btn btn-default" href="workprojects.html" role="button">View Work Projects &raquo;</a>
+               </p>
             </div>
             
         </div>
@@ -171,9 +214,6 @@
             }); 
         });
     </script>
-
-    <!-- Google Maps API Key - Use your own API key to enable the map feature. More information on the Google Maps API can be found at https://developers.google.com/maps/ -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
