--- a/tmau.html
+++ b/tmau.html
@@ -77,7 +77,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" id="myShadow">Tyler Mau</h1>
-                        <p class="intro-text" id="myDescription">A complilation of my programming projects and accomplishments from over the years.</p>
+                        <p class="intro-text" id="myDescription">A compilation of my programming projects and achievements from over the years.</p>
                         <a id="myDescription" href="#resume" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
