--- a/quadcopter.html
+++ b/quadcopter.html
@@ -17,7 +17,7 @@
     <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
     <link rel="stylesheet" href="css/mystyle.css">
-    <link rel="stylesheet" href="css/sidestyle.css">
+    <link rel="stylesheet" href="css/quadstyle.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -55,16 +55,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#quadcopter">Quadcopter</a>
+                        <a class="page-scroll" href="#quadcopter"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#rov">ROV</a>
+                        <a class="page-scroll" href="#rov"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#jacket">Jacket</a>
+                        <a class="page-scroll" href="#jacket"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#juicypong">JuicyPong</a>
+                        <a class="page-scroll" href="#juicypong"></a>
                     </li>
                 </ul>
             </div>
@@ -79,13 +79,13 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading" id="myShadow">Projects</h1>
-                        <p class="intro-text" id="myShadow">Some cool projects I have worked on during and outside of school
+                        <h1 class="brand-heading" id="myShadow">Quadcopter</h1>
+                        <p class="intro-text" id="myShadow">Building my quadcopter and control system
                         </p>
                         <a id="myShadow" href="#quadcopter" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
-                        <h3 id="myShadow">Projects</h3>
+                        <h3 id="myShadow">Explore</h3>
                     </div>
                 </div>
             </div>
@@ -109,7 +109,7 @@
                     As a computer engineering student pursuing work in the field of robotics, I wanted to start a fun project that would give me more experience in related subjects such as sensor filters and PID controller. 
                 </p>
                 <p>
-                    <a class="btn btn-default" href="quadcopter.html" role="button">View Progress &raquo;</a>
+                    <a class="btn btn-default" href="GDCJam/www/index.html" role="button">View Progress &raquo;</a>
                 </p>
                 <a href="#rov" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
@@ -136,7 +136,7 @@
                     Along with the embedded systems experience, I wanted a fun new project that was less popular than UAVs. I figured creating an underwater vehicle with some autonomous capability would give me a nice challenge.
                 </p>
                 <p>
-                    <a class="btn btn-default" href="rov.html" role="button">View Progress &raquo;</a>
+                    <a class="btn btn-default" href="GDCJam/www/index.html" role="button">View Progress &raquo;</a>
                 </p>
                 <a href="#jacket" class="btn btn-circle page-scroll">
                     <i class="fa fa-angle-double-down animated"></i>
