Fixed Quadcopter Page

--- a/quadcopter.html
+++ b/quadcopter.html
@@ -55,16 +55,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#quadcopter"></a>
+                        <a class="page-scroll" href="#hardware">Hardware</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#rov"></a>
+                        <a class="page-scroll" href="#filters">Filters</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#jacket"></a>
+                        <a class="page-scroll" href="#pid">PID</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#juicypong"></a>
+                        <a class="page-scroll" href="#testing">Testing</a>
                     </li>
                 </ul>
             </div>
@@ -82,7 +82,7 @@
                         <h1 class="brand-heading" id="myShadow">Quadcopter</h1>
                         <p class="intro-text" id="myShadow">Building my quadcopter and control system
                         </p>
-                        <a id="myShadow" href="#quadcopter" class="btn btn-circle page-scroll">
+                        <a id="myShadow" href="#hardware" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
                         <h3 id="myShadow">Explore</h3>
@@ -93,120 +93,15 @@
     </header>
 
     <!-- Quadcopter Section -->
-    <section id="quadcopter" class="container text-center parent">
+    <section id="hardware" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
                 <h1 class="text-center mylabelpurple">
-                    Quadcopter
+                    Hardware
                 </h1>
                 <p>
-                    Follow my adventure as I build my own quadcopter and control system.
+                    Coming Soon...
                 </p>
-                <h3 class="mylabelyellow noshadow">
-                    Motivation
-                </h3>
-                <p>
-                    As a computer engineering student pursuing work in the field of robotics, I wanted to start a fun project that would give me more experience in related subjects such as sensor filters and PID controller. 
-                </p>
-                <p>
-                    <a class="btn btn-default" href="GDCJam/www/index.html" role="button">View Progress &raquo;</a>
-                </p>
-                <a href="#rov" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-                <h3 id="myDescription">Next Project</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- ROV Section -->
-    <section id="rov" class="container text-center parent">
-        <div class="row child">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelblue">
-                    Underwater ROV
-                </h1>
-                <p>
-                    My senior project which involves the design and development of an underwater remotely-operated vehicle (ROV). Sponsored by Northrop Grumman.
-                </p>
-                <h3 class="mylabelgreen noshadow">
-                    Motivation
-                </h3>
-                <p>
-                    Along with the embedded systems experience, I wanted a fun new project that was less popular than UAVs. I figured creating an underwater vehicle with some autonomous capability would give me a nice challenge.
-                </p>
-                <p>
-                    <a class="btn btn-default" href="GDCJam/www/index.html" role="button">View Progress &raquo;</a>
-                </p>
-                <a href="#jacket" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-                <h3 id="myDescription">Next Project</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- Heart-Rate LED Jacket Section -->
-    <section id="jacket" class="container text-center parent">
-        <div class="row child">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelyellow">
-                    Heart-Rate Monitor LED Jacket
-                </h1>
-                <p>
-                    For an open-ended class project, I modified a jacket with RGB LEDs to display the wearer's heart-rate. As a bonus, the LEDs changed color with the ambient temperature.
-                </p>
-                <p>
-                    <img src="img/jacket.jpg" width="35%;">
-                </p>
-                <a href="#juicypong" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-                <h3 id="myDescription">Next Project</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- Juicy Pong Section -->
-    <section id="juicypong" class="container text-center parent">
-        <div class="row child">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center">
-                    <font color="red">J</font><font color="orange">u</font><font color="yellow">i</font><font color="green">c</font><font color="blue">y</font> <font color="purple">P</font><font color="red">o</font><font color="orange">n</font><font color="yellow">G</font>
-                </h1>
-                <p>
-                    Created at the 2015 Intel XDK GDC Game Jam at Cal Poly<br>
-                    by Tyler Mau, Thomas Steinke, and Elliot Fiske
-                </p>
-                <img src="img/team.jpg" width="35%;">
-                <p>
-                    <b>Team Juicy Pong</b>: Brainstorming Ideas at the Event
-                </p>
-                <h3 class="mylabelblue noshadow">
-                    Event
-                </h3>
-                <p style="font-size:16px">
-                    My teammates and I spent 14 hours developing the game you can play below. Our game was voted "best game" and we had the opportunity to showcase the game at the 2015 GDC.
-                </p>
-                <h3 class="mylabelgreen noshadow">
-                    My Contribution
-                </h3>
-                <p style="font-size:16px">
-                    Helped with overall game design, worked on the core gameplay mechanics, and created the power-ups.
-                </p>
-                <h3 class="mylabelyellow noshadow">
-                    Game Description
-                </h3>
-                <p style="font-size:16px">
-                    Juicy Pong is a 2-player game based on the timeless classic, "Pong"... but with a twist! As you continue playing, the game gets "juicier" with more exciting effects. The game also features an experience mechanic that will provide players with several power-ups to aid you to victory!
-                </p>
-                <p>
-                    <a class="btn btn-default" href="GDCJam/www/index.html" role="button">Play Game &raquo;</a>
-                </p>
-                <!--<a href="#projects" class="btn btn-circle page-scroll">
-                    <i class="fa fa-angle-double-down animated"></i>
-                </a>
-                <h3 id="myDescription">Next Project</h3>-->
             </div>
         </div>
     </section>
