--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             </div>
             <div class="col-md-4">
                 <h3 class="btn mylink">
-                    <a href="workprojects.html">
-                        Internship
+                    <a href="workselect.html">
+                        Internships
                     </a>
                 </h3>
                 <p>
