--- a/schoolprojects.html
+++ b/schoolprojects.html
@@ -60,6 +60,9 @@
                 <li>
                     <a href="#2014" class="page-scroll sidebarfont">Fourth Year</a>
                 </li>
+                <li>
+                    <a href="#2015" class="page-scroll sidebarfont">Fifth Year</a>
+                </li>
             </ul>
             <ul class="myfooter" id="sidebar-footer">
                 <li>
@@ -90,14 +93,14 @@
                         <hr class="featurette-divider">
                         <br>
                         <p>
-                            <b style="color: #EAAA00">Current Year:</b> Fourth<br>
+                            <b style="color: #EAAA00">Current Year:</b> Fifth<br>
                             <b style="color: #EAAA00">Major:</b> Computer Engineering<br>
                             <b style="color: #EAAA00">Graduation:</b> Spring 2016<br>
                         </p>
                         <br>
                         <p>After careful consideration of many universities, I chose to attend Cal Poly, San Luis Obispo. The "Learn By Doing" approach towards academics greatly appealed to my strength in kinesthetic learning. 
                         <br><br>
-                        Looking back as a fourth year Computer Engineering (CPE) major, I couldn't be happier with my choice of university. Cal Poly's CPE program continues to be an amazing learning experience full of challenging courses that fulfill my need/passion to constantly learn new programming concepts and languages. I can't wait to see what these upcoming quarters will have to offer!</p>
+                        Looking back as a fifth year Computer Engineering (CPE) major, I couldn't be happier with my choice of university. Cal Poly's CPE program continues to be an amazing learning experience full of challenging courses that fulfill my need/passion to constantly learn new programming concepts and languages. I can't wait to see what these upcoming quarters will have to offer!</p>
                         <br>
                         <p>
                             Note: Below, you can find details/information on my completed/enrolled computer-related courses. Course descriptions have been taken from the Cal Poly catalog.
@@ -221,7 +224,7 @@
                 <div class="row schoolpad">
                     <div id="2014" class="col-lg-12" style="padding-top: 2px;">
                         <!-- Page Content -->
-                        <h1>Fourth Year (2012 - 2013)</h1>
+                        <h1>Fourth Year (2014 - 2015)</h1>
                         <hr class="featurette-divider">
                         <h2>Computer Architecture</h2>
                         <p>
@@ -247,10 +250,10 @@
                             Introduction to sequential and multiprogramming operating systems; kernel calls, interrupt service mechanisms, scheduling, files and protection mechanisms, conventional machine attributes that apply to operating system implementation, virtual memory management, and I/O control systems. 
                         </p>
                         <br>
-                        <h2>Introduction to Computer Networks (Currently Enrolled)</h2>
+                        <h2>Introduction to Computer Networks</h2>
                         <p>
                             <b class="cpgreen">Course Number:</b> CPE/CSC 464<br>
-                            <b class="cpgreen">Primary Language:</b> Unknown
+                            <b class="cpgreen">Primary Language:</b> C
                         </p>
                         <h3 class="cpgold noshadow">
                             Description
@@ -258,6 +261,49 @@
                         <p>
                             Computer network architectures; communications protocol standards; services provided by the network; historical and current examples presented.
                         </p>
+                    </div>
+                </div>
+                <div class="row schoolpad">
+                    <div id="2015" class="col-lg-12" style="padding-top: 2px;">
+                        <!-- Page Content -->
+                        <h1>Fifth Year (2015 - 2016)</h1>
+                        <hr class="featurette-divider">
+                        <h2>Autonomous Mobile Robotics</h2>
+                        <p>
+                            <b class="cpgreen">Course Number:</b> CPE/CSC 416<br>
+                            <b class="cpgreen">Primary Language:</b> C
+                        </p>
+                        <h3 class="cpgold noshadow">
+                            Description
+                        </h3>
+                        <p>
+                            Theory and application of concepts relevant to autonomous mobile robots. Sensor and actuator interfacing, programming mobile robots, mobile robot configurations, software architectures and algorithms.
+                        </p>
+                        <br>
+                        <h2>Computer Vision (Currently Enrolled)</h2>
+                        <p>
+                            <b class="cpgreen">Course Number:</b> CPE/EE 428<br>
+                            <b class="cpgreen">Primary Language:</b> Unknown
+                        </p>
+                        <h3 class="cpgold noshadow">
+                            Description
+                        </h3>
+                        <p>
+                            Introduction to the concepts of 2D and 3D computer vision: low-level image processing methods such as filtering and edge detection; feature extraction; segmentation and clustering; stereo vision; appearance-based and model-based algorithms.
+                        </p>
+                        <br>
+                        <h2>Senior Project (Currently Enrolled)</h2>
+                        <p>
+                            <b class="cpgreen">Course Number:</b> CPE 461<br>
+                            <b class="cpgreen">Primary Language:</b> NA
+                        </p>
+                        <h3 class="cpgold noshadow">
+                            Description
+                        </h3>
+                        <p>
+                            Selection and completion of an individual or team project in laboratory environment. Project results are presented in a formal report. Project details coming soon...
+                        </p>
+                        <br>
                     </div>
                 </div>
                 <!-- Footer -->
