--- a/workselect.html
+++ b/workselect.html
@@ -9,15 +9,16 @@
     <meta name="description" content="">
     <meta name="author" content="Tyler" >
 
-    <title>Projects</title>
+    <title>Work Selection</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <link href="css/grayscale.css" rel="stylesheet">
+
     <link rel="stylesheet" href="css/mystyle.css">
-    <link rel="stylesheet" href="css/rovstyle.css">
+    <link rel="stylesheet" href="css/workselectstyle.css">
 
     <!-- Custom Fonts -->
     <link href="font-awesome-4.2.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -42,7 +43,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
                     <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="http://tylermmau.com">
+                <a class="navbar-brand page-scroll" href="#page-top">
                     <i class="fa fa-play-circle"></i>Home
                 </a>
             </div>
@@ -53,15 +54,6 @@
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden">
                         <a href="#page-top"></a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#hardware">Hardware</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#software">Software</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#testing">Testing</a>
                     </li>
                 </ul>
             </div>
@@ -75,34 +67,40 @@
         <div class="intro-body">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading" id="myShadow">ROV</h1>
-                        <p class="intro-text" id="myShadow">
-                            Design and development of an underwater ROV.
-                        </p>
-                        <a id="myShadow" href="#hardware" class="btn btn-circle page-scroll">
-                            <i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                        <h3 id="myShadow">Explore</h3>
+                    <div class="row child">
+                        <div class="col-md-6">
+                            <img src="img/Aerospace.png" style="width:44%" id="myShadow"></img>
+                            <h1 class="btn mylink" id="myShadow">
+                                <a href="workprojects.html">
+                                    The Aerospace Corporation
+                                </a>
+                            </h1>
+                            <p id="myShadow">
+                                July 2011 - September 2014
+                            </p>
+                            <p id="myShadow">
+                                During my recurring summer internship at Aerospace, I worked on over 20 different projects. This link will lead to a page with descriptions of most of these projects.
+                            </p>
+                        </div>
+                        <div class="col-md-6">
+                            <img src="img/Adobe.png" style="width:50%" id="myShadow"></img>
+                            <h1 class="btn mylink" id="myShadow">
+                                <a href="https://github.com/tmaudev/gitrob">
+                                    Adobe Systems Incorporated
+                                </a>
+                            </h1>
+                            <p id="myShadow">
+                                June 2015 - September 2015
+                            </p>
+                            <p id="myShadow">
+                                As a Security Engineering intern, I developed and implemented security tools for the company. This link will lead to a Github repository containing one of the open-source security tools I worked on during my internship.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-
-    <!-- Quadcopter Section -->
-    <section id="hardware" class="container text-center parent">
-        <div class="row child">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelpurple">
-                    Hardware
-                </h1>
-                <p>
-                    Coming Soon...
-                </p>
-            </div>
-        </div>
-    </section>
 
     <!-- Footer -->
     <footer>
