--- a/quadcopter.html
+++ b/quadcopter.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Tyler" >
 
-    <title>Projects</title>
+    <title>Quadcopter</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -79,8 +79,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading" id="myShadow">Quadcopter</h1>
-                        <p class="intro-text" id="myShadow">Building my quadcopter and control system
+                        <h1 class="brand-heading" id="myShadow">UAV</h1>
+                        <p class="intro-text" id="myShadow">My progress designing and developing my quadcopter's control system.
                         </p>
                         <a id="myShadow" href="#hardware" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
