--- a/resume.html
+++ b/resume.html
@@ -106,10 +106,10 @@
                <br>
                <h3>
                   B.S. in <u>Computer Engineering</u><br><br>
-                  4th Year Undergraduate<br><br>
+                  5th Year Undergraduate<br><br>
                   Graduating June 2016<br><br>
-                  Overall GPA: 3.272<br><br>
-                  Dean's List 3 Times
+                  Overall GPA: 3.312<br><br>
+                  Dean's List 5 Times
                </h3>
                <br>
                <p>
@@ -120,45 +120,57 @@
             <div class="box skills">
                <h2>Programming Languages</h2>
                <h4>
-                  C, Java, Python, C++, VBA, HTML, CSS, JavaScript, Swift, AppleScript, MIPS Assembly<br>
+                  C, Java, Python, C++, VBA, Ruby, HTML, CSS, JavaScript, Swift, AppleScript<br>
                </h4>
                <h5>*Always excited to learn new programming concepts and languages*<br></h5>
                <br>
                <h2>Relevant Knowledge</h2>
                <h4>
-                  Object Oriented Programming<br><br>
-                  POSIX Multithreading<br><br>
-                  PCAP Library (Network Tracing)<br><br>
-                  JavaFX Library
+                  Artificial Neural Networks<br><br>
+                  Monte Carlo Localization<br><br>
+                  PID Controllers<br><br>
+                  AHRS Algorithms<br><br>
+                  Computer Vision<br><br>
+                  AVR Microcontrollers<br><br>
                </h4>
                <br>
                <h2>Operating Systems</h2>
                <h4>
-                  Windows ('95  8.1)<br><br>
-                  OS X (Leopard - Yosemite)<br><br>
-                  Linux (Ubuntu, CentOS, Fedora, RedHat)<br><br><br>
-                  CPU Scheduling, Memory Management, File Systems (Experience with FUSE)
+                  Windows ('95 - 10)<br><br>
+                  OS X (Leopard - El Capitan)<br><br>
+                  Linux (Ubuntu, CentOS, Fedora, RedHat)
                </h4>
                <br>
                <h2>Development Environments</h2>
                <h4>
-                  Unix Terminal (VIM), Xcode, Visual Studio, Eclipse, Netbeans, Bluefish
+                  Unix Terminal (VIM), Xcode, Atmel Studio, Visual Studio, Eclipse, Netbeans
                </h4>
                <p></p>
             </div>
 
             <div class="box prof">
-               <h2>The Aerospace Corporation</h2>
-               <h3>July 2011 - September 2014</h3>
-               <br>
-               <h3>
-                  Software Development Intern<br><br>
-                  Recurring Internship Offer for 4 Years<br><br>
-                  Worked On Over 20 Projects<br><br>
+               <h2>Adobe Systems Incorporated</h2>
+               <h3>Security Engineering Intern<br><br>
+                  June 2015 - September 2015
                </h3>
                <br>
+               <h4>
+                  Contributed to Open Source Security Tools<br><br>
+                  Implemented Security Tools<br><br>
+               </h4>
+               <br>
+               <h2>The Aerospace Corporation</h2>
+               <h3>Software Development Intern<br><br>
+                  July 2011 - September 2014
+               </h3>
+               <br>
+               <h4>
+                  Recurring Internship Offer for 4 Years<br><br>
+                  Worked On Over 20 Projects<br><br>
+               </h4>
+               <br>
                <p>
-                  <a class="btn btn-default" href="workprojects.html" role="button">View Work Projects &raquo;</a>
+                  <a class="btn btn-default" href="workselect.html" role="button">View Work Projects &raquo;</a>
                </p>
             </div>
             
