--- a/sideprojects.html
+++ b/sideprojects.html
@@ -80,7 +80,7 @@
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
                         <h1 class="brand-heading" id="myShadow">Projects</h1>
-                        <p class="intro-text" id="myShadow">Some cool projects I have worked on during and outside of school
+                        <p class="intro-text" id="myShadow">Some fun projects I have worked on during and outside of school.
                         </p>
                         <a id="myShadow" href="#quadcopter" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
@@ -96,17 +96,11 @@
     <section id="quadcopter" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelpurple">
+                <h1 class="text-center" style="font-size:60px; color:#ffff66;" id="quadShadow">
                     Quadcopter
                 </h1>
                 <p>
                     Follow my adventure as I build my own quadcopter and control system.
-                </p>
-                <h3 class="mylabelyellow noshadow">
-                    Motivation
-                </h3>
-                <p>
-                    As a computer engineering student pursuing work in the field of robotics, I wanted to start a fun project that would give me more experience in related subjects such as sensor filters and PID controller. 
                 </p>
                 <p>
                     <a class="btn btn-default" href="quadcopter.html" role="button">View Progress &raquo;</a>
@@ -123,17 +117,11 @@
     <section id="rov" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelblue">
+                <h1 class="text-center mylabelblue" style="font-size:60px" id="rovShadow">
                     Underwater ROV
                 </h1>
                 <p>
-                    My senior project which involves the design and development of an underwater remotely-operated vehicle (ROV). Sponsored by Northrop Grumman.
-                </p>
-                <h3 class="mylabelgreen noshadow">
-                    Motivation
-                </h3>
-                <p>
-                    Along with the embedded systems experience, I wanted a fun new project that was less popular than UAVs. I figured creating an underwater vehicle with some autonomous capability would give me a nice challenge.
+                    My senior project, which involves the design and development of an underwater remotely operated vehicle (ROV). Sponsored by Northrop Grumman.
                 </p>
                 <p>
                     <a class="btn btn-default" href="rov.html" role="button">View Progress &raquo;</a>
@@ -150,8 +138,8 @@
     <section id="jacket" class="container text-center parent">
         <div class="row child">
             <div class="col-lg-8 col-lg-offset-2">
-                <h1 class="text-center mylabelyellow">
-                    Heart-Rate Monitor LED Jacket
+                <h1 class="text-center" style="font-size:60px; color:#ff5050" id="heartShadow">
+                    Heart-Rate LED Jacket
                 </h1>
                 <p>
                     For an open-ended class project, I modified a jacket with RGB LEDs to display the wearer's heart-rate. As a bonus, the LEDs changed color with the ambient temperature.
@@ -180,7 +168,7 @@
                 </p>
                 <img src="img/team.jpg" width="35%;">
                 <p>
-                    <b>Team Juicy Pong</b>: Brainstorming Ideas at the Event
+                    Team Juicy Pong
                 </p>
                 <h3 class="mylabelblue noshadow">
                     Event
@@ -198,7 +186,7 @@
                     Game Description
                 </h3>
                 <p style="font-size:16px">
-                    Juicy Pong is a 2-player game based on the timeless classic, "Pong"... but with a twist! As you continue playing, the game gets "juicier" with more exciting effects. The game also features an experience mechanic that will provide players with several power-ups to aid you to victory!
+                    Juicy Pong is a 2-player game based on the timeless classic, "Pong"... but with a twist! As you continue playing, the game gets "juicier" with more exciting effects. The game also features an experience mechanic that will provide players with several power-ups to aid you to victory! Music created by Elliot Fiske.
                 </p>
                 <p>
                     <a class="btn btn-default" href="GDCJam/www/index.html" role="button">Play Game &raquo;</a>
